Fix: correção na pagina sou.html

--- a/sou.html
+++ b/sou.html
@@ -77,32 +77,43 @@
                 técnologicos, voltados para o ambito da programação.
               </p>
             </div>
-            <div class="text-center">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/yWA3qDLuNRY"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
+
             <p class="text-center">
               também sugiram iniciativas e projetos como aulas e
               compartilhamento de conteúdo voltado para a educação básica,
               através da pedagoga Edneide Marcelino.
             </p>
-            <div class="text-center">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/FCuQO-uOQEM"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+          </div>
+        </div>
+        <div class="row">
+          <div class="container">
+            <div class="row bg-gradient">
+              <div class="col">
+                <iframe
+                  class="col-12"
+                  src="https://www.youtube.com/embed/yWA3qDLuNRY"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="col">
+                <iframe
+                class="col-12"
+                  src="https://www.youtube.com/embed/FCuQO-uOQEM"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class=""></div>
+            <div class="col">
+              <div class=""></div>
             </div>
           </div>
         </div>
