--- a/sou.html
+++ b/sou.html
@@ -18,7 +18,7 @@
       <div class="container fixed-top">
         <nav class="navbar navbar-dark bg-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tec.Inova 2022</a>
+            <a class="navbar-brand" href="/">Tec.Inova 2022</a>
             <button
               class="navbar-toggler"
               type="button"
