--- a/sou.html
+++ b/sou.html
@@ -66,8 +66,8 @@
         </nav>
       </div>
       <section class="container">
-        <div class="row">
-          <div class="p-4 bg-light text-dark mt-5">
+        <div class="row ">
+          <div class="p-4 bg-light text-dark mt-5 rounded">
             <div class="d-flex">
               <h1 class="p-2 me-3 text-danger">Sou...</h1>
               <p class="me-3 text-center">
