Add: Page trabalhos.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Trabalhos...</a>
+                  <a class="nav-link" href="trabalhos.html">Trabalhos...</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Sobre...</a>
