--- a/trabalhos.html
+++ b/trabalhos.html
@@ -69,20 +69,16 @@
         <div class="row ">
           <div class="p-4 bg-light text-dark mt-5 rounded">
             <div class="d-flex">
-              <h1 class="p-2 me-3 text-danger">Sou...</h1>
-              <p class="me-3 text-center">
-                Mais que uma ideia, uma oportunidade que cresceu através dos
-                esforços de Antonio Rony, o qual idealizou a tecinova, como uma
-                porta de entrada para o desenvolvimento de projetos
-                técnologicos, voltados para o ambito da programação.
-              </p>
+              <h1 class="p-2 me-3 text-danger">Trabalhos...</h1>
             </div>
-
-            <p class="text-center">
-              também sugiram iniciativas e projetos como aulas e
-              compartilhamento de conteúdo voltado para a educação básica,
-              através da pedagoga Edneide Marcelino.
-            </p>
+            <div class="d-flex">
+                <p class="me-3 text-center col-lg-6">
+                    Desenvolvendo diversos trabalhos nas áreas de suporte e desenvolvimento de software, deste simples páginas a dinâmicos sistemas web.
+                </p>
+                <p class="me-3 text-center col-lg-6">
+                    Além do desenvolvimento web, temos produtos e serviços voltados para o desktop e para o mobile.
+                </p>
+            </div>
           </div>
         </div>
         <div class="row">
