Add metas de indexagem do google

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tecinova 2022</title>
+    <meta name=”description” content=”Tecinova, desenvolvendo soluções para os seus problemas.”>
+    <meta name=”keywords” content=”tec, inova, tecinova, tecnologia, desenvolvimento, desenvlvedor, antonio, rony, antoniorony, mauriti, ceara, ce″/>
+    <meta name=”robots” content=”index, follow”>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <script src="js/bootstrap.min.js"></script>
     <link
